# moksha

./: .cvsignore  .gitignore  ABOUT-NLS  AUTHORS  BACKPORTS  BUGS  CODE_OF_CONDUCT.md  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  checker.sh  config.h  config.h.in  config.status  configure  configure.ac  configure.in  e.spec  eap_to_desktop  enlightenment-config.in  enlightenment.bb  enlightenment.oe  enlightenment.pc  enlightenment.pc.in  enlightenment.spec  enlightenment.spec.in  es.po  libtool  moksha.pot  netwm.txt  (+5 more)
config/: Makefile  Makefile.am  Makefile.in
config/bodhi/: Makefile.am  Makefile.in  e.cfg  e.src  e_randr.cfg  e_randr.src  e_remember_restart.src  exehist.cfg  exehist.src  module.battery.cfg  module.battery.src  module.clock.cfg  module.clock.src  module.comp.cfg  module.comp.src  module.conf.src  module.everything-apps.cfg  module.everything-apps.src  module.everything-files.cfg  module.everything-files.src  module.everything.cfg  module.everything.src  module.fileman.cfg  module.fileman.src  module.gadman.cfg  module.gadman.src  module.ibar.cfg  module.ibar.src  module.mixer.cfg  module.mixer.src  module.notification.cfg  module.notification.src  module.pager.cfg  module.pager.src  module.places.src  module.syscon.cfg  module.syscon.src  module.tasks.cfg  module.tasks.src  profile.desktop
config/default/: Makefile  Makefile.am  Makefile.in  e.cfg  e.src  profile.desktop
config/illume/: Makefile.am  e.src  module.battery.src  module.conf.src  module.dropshadow.src  module.illume-home.src  module.illume.src  module.illume2.src  module.mixer.src  profile.desktop
config/illume-home/: Makefile.am  e.cfg  e.src  e_remember_restart.cfg  module.battery.cfg  module.battery.src  module.dropshadow.cfg  module.ibar.cfg  module.illume-home.cfg  module.illume-home.src  module.illume-indicator.src  module.illume-keyboard.cfg  module.illume-keyboard.src  module.illume-softkey.cfg  module.illume-softkey.src  module.illume2.cfg  module.illume2.src  module.pager.cfg  module.pager.src  profile.desktop
config/minimalist/: Makefile.am  e.src  module.battery.src  module.dropshadow.src  module.fileman.src  module.ibox.src  module.temperature.src  profile.desktop
config/mobile/: Makefile  Makefile.am  Makefile.in  e.src  module.battery.src  module.conf.src  module.illume-indicator.cfg  module.illume-keyboard.cfg  module.illume-softkey.cfg  module.illume-softkey.src  profile.desktop
config/netbook/: Makefile.am  e.src  module.cpufreq.src  module.dropshadow.src  module.ibar.src  profile.desktop
config/scaleable/: .cvsignore  Makefile.am  e.src  module.pager.src  profile.desktop
config/standard/: Makefile  Makefile.am  Makefile.in  e.src  module.battery.src  module.conf.cfg  module.conf.src  module.cpufreq.cfg  module.dropshadow.cfg  module.dropshadow.src  module.fileman.cfg  module.fileman.src  module.ibar.cfg  module.ibar.src  module.pager.src  profile.desktop
data/backgrounds/: Blue_Sky_Tree.edj  Brown_Rock_Hi.edj  Colorful_Roses.edj  Cracked_Earth.edj  Dark_Gradient.edj  Darkconcrete.edj  Flat-Stone-Pattern.edj  Grassy.edj  Green_Stem.edj  Hills.edj  Ivy_Wall.edj  Japanesemaple.edj  Ladybug.edj  Lantern_Cluster.edj  Leafy_Red.edj  Light_Gradient.edj  Makefile  Makefile.am  Makefile.in  Motleyrock.edj  Pattern_Radial.edj  Pattern_Vertical.edj  Pattern_Vertical_Hi.edj  Pine_Silhouettes.edj  Purple_Flower_Bunch.edj  Ramen.edj  Shady_Leaves.edj  Skywall.edj  Squiggle.edj  Stringflower.edj  Temple.edj  Wetgrass.edj  Wetleaf.edj  Whiterock.edj  default.bg.db  grassy_irish_cliff.bg.db  ivy_wall_shadowed.bg.db  ladybug_rock_grass.bg.db  view.bg.db
data/etc/: Makefile  Makefile.am  Makefile.in  e-applications.menu  enlightenment.menu  sysactions.conf  sysactions.conf.in
data/flags/: Makefile  Makefile.am  Makefile.in
data/fonts/: Makefile.am  Vera.COPYING  fonts.alias  fonts.dir  kochi.COPYING
data/icons/: .cvsignore  Makefile  Makefile.am  Makefile.in  default.edc
data/images/: Makefile  Makefile.am  Makefile.in  test.edj
data/init/: .cvsignore  Makefile.am  default.edc  init.edc
data/themes/: .cvsignore  .gitignore  Makefile  Makefile.am  Makefile.in  default.edc  default_about.edc  default_background.edc  default_battery.edc  default_border.edc  default_button.edc  default_check.edc  default_clock.edc  default_color_well.edc  default_configure.edc  default_connman.edc  default_cpufreq.edc  default_cslider.edc  default_desklock.edc  default_deskpreview.edc  default_desktopname.edc  default_dialog.edc  default_entry.edc  default_error.edc  default_exebuf.edc  default_fileman.edc  default_filesel.edc  default_fontpreview.edc  default_frame.edc  default_gadman.edc  default_ibar.edc  default_ibox.edc  default_icons.edc  default_ilist.edc  default_itray.edc  default_label.edc  default_menu.edc  default_mixer.edc  (+25 more)
doc/: .gitignore  .indent.pro  Doxyfile  Doxyfile.in  FDO.txt  Makefile  Makefile.am  Makefile.in  cache.txt  documentation.html  e.css  e.dox  e.dox.in  html-customizations.dsl.in  illume2.html  kernel-doc.in  manual.raw  stylesheet.css
lib/: .cvsignore  Makefile.am  e_hack.c
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makefile  Makefile.am  Makefile.in  Makevars  POTFILES  POTFILES.in  POTFILES.skip  ar.po  be.po  bg.gmo  bg.po  ca.gmo  ca.mo  ca.po  ca.po~  cs.gmo  cs.po  cs.po~  da.po  de.gmo  de.mo  de.po  el.po  el.po~  enlightenment.pot  eo.gmo  eo.po  eo.po~  es.gmo  es.po  et.gmo  et.po  fi.po  fi.po~  fo.po  fo.po~  (+60 more)
src/: .cvsignore  .indent.pro  Makefile  Makefile.am  Makefile.in  actions.c  actions.h  background.c  background.h  block.c  block.h  border.c  border.h  bordermenu.c  bordermenu.h  config.c  config.h  cursors.c  cursors.h  data.c  data.h  debug.c  debug.h  delayed.c  delayed.h  desktops.c  desktops.h  e.h  e_dir.c  e_dir.h  e_ferite.c  e_ferite.fec  e_ferite.h  e_file.c  e_file.h  e_view_look.c  e_view_look.h  e_view_machine.c  e_view_machine.h  e_view_model.c  (+57 more)
tools/: Makefile.am  e_img_export.c  e_img_import.c  e_setup.c
(+2214 files in other folders)
